# gh-practice-calculator

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
calculator/: __init__.py  core.py
tests/: test_core.py
